overflowX correction

--- a/assets/css/4-pages/_home.sass
+++ b/assets/css/4-pages/_home.sass
@@ -1,5 +1,15 @@
+article,
+aside,
+details,
+figcaption,
 footer,
-section
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary
 	overflow-x: clip
 
 /************************* Introduction *************************/
@@ -434,7 +444,7 @@ section
 
 .project.shown
 	opacity: 1
-	max-height: 2000px
+	max-height: 1300px
 	padding: 40px 0
 
 .video-in-project
@@ -562,6 +572,9 @@ section
 		right: 200vw
 
 .web-design.automatli
+	.project
+		img
+			max-height: 1100px
 	.web-design__visual
 		width: 800px
 		height: 800px
@@ -591,6 +604,15 @@ section
 			img
 				left: 0px
 				top: 100px
+
+	@media (max-width: 411px)
+		.project
+			img
+				left: 30px
+				width: 1300px
+
+
+
 /************************* Sojournal *************************/
 
 .web-design.sojournal
@@ -619,11 +641,11 @@ section
 			top: 410px
 			z-index: 1
 			left: 50%
-			width: 150%
+			max-width: 150%
 			transform: translateX(-50%)
-			max-width: 2500px
+			max-height: 1100px
 			@media (max-width: 767px)
-				width: 250%
+				max-width: 250%
 
 	.project.shown
 		max-height: 1400px
@@ -660,6 +682,10 @@ section
 	@media (max-width: 411px)
 		.project.shown
 			height: 750px
+			img
+				left: 30px
+				max-width: 1400px
+				top: 100px
 /************************* ABK *************************/
 
 .web-design.abk
@@ -684,7 +710,7 @@ section
 
 	@media (max-width: 767px)
 		padding: 0 0 100px 0
-		margin-top: 400px
+		margin-top: 500px
 
 		.web-design__visual
 			width: 600px
